<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".authentication.SignUpActivity">

    <TextView
        android:id="@+id/titleLabel"
        style="@style/AuthenticationTitle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/sign_up_title" />

    <TextView
        android:id="@+id/displayNameLabel"
        style="@style/AuthenticationLabel"
        android:text="@string/display_name" />

    <EditText
        android:id="@+id/displayNameField"
        style="@style/AuthenticationInput"
        android:ems="10"
        android:hint="@string/display_name"
        android:drawableStart="@drawable/ic_email"
        android:inputType="textEmailAddress"
        android:autofillHints="" />

    <TextView
        android:id="@+id/emailLabel"
        style="@style/AuthenticationLabel"
        android:text="@string/email" />

    <EditText
        android:id="@+id/emailField"
        style="@style/AuthenticationInput"
        android:ems="10"
        android:hint="@string/email_address"
        android:drawableStart="@drawable/ic_email"
        android:inputType="textEmailAddress"
        android:autofillHints="" />

    <TextView
        android:id="@+id/passwordLabel"
        style="@style/AuthenticationLabel"
        android:text="@string/password" />

    <EditText
        android:id="@+id/passwordField"
        style="@style/AuthenticationInput"
        android:ems="10"
        android:hint="@string/password"
        android:drawableStart="@drawable/ic_lock"
        android:drawableEnd="@drawable/ic_visibility_off"
        android:inputType="textPassword"
        android:autofillHints="" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="30dp">

        <Button
            android:id="@+id/registerButton"
            style="@style/Button.Primary"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/sign_up">
        </Button>

        <ProgressBar
            android:id="@+id/progressBar"
            android:visibility="gone"
            android:backgroundTint="@android:color/transparent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>

    <TextView
        android:id="@+id/moveToSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/move_to_sign_in"
        android:textColor="?attr/highlightedTextColor"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:clickable="true"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginTop="20dp" />

</LinearLayout>